0000-00-00:
    * version 0.8
    * Fix adding/removing users from highlighting groups with two-column
      message lists
    * Support for Firefox 10
    * Compatibility with latest version of GameFAQs
    * Add and remove several themes to match updates to GameFAQs' own theme
      list

2011-02-06:
    * version 0.7.12
    * Fix quoting, filtering and QuickWhois with left message data
    * Fix "edit" link with message link icons stylesheet
    * Update 8for11 CSS
    * Fix QuickPost reset button
    * More robust QuickPost which may fix the bugs affecting some people
    * Fix QuickPost appearing on message detail pages for mods
    * Fix highlighting of VIPs/mods/admins
    * Add option to hide the signature textbox

2011-02-05:
    * version 0.7.11
    * Fix post filtering with "ad in header" setting
    * Update 8for11 CSS
    * Fix adding users to highlighting groups from the topic list when group
      names are shown
    * New ProgFAQs CSS
    * New Ninestalgia CSS
    * Support for the recent GameFAQs updates
    * Show QuickPost for mods in closed topics
    * Update GFPastel 2010 CSS
    * Fix "close" link being shown instead of "delete" for topics with no
      replies
    * Add "edit" link to messages

2010-10-06:
    * version 0.7.10
    * Allow the options window to be resized again
    * Support for the GameFAQs site redesign

2010-09-28:
    * version 0.7.9
    * Fix the tracked topic holding feature
    * Fix problems with stylesheets and other features not working correctly
      for some people
    * Fix problems with topic pagination, last post links and message numbering
    * Fix double headers appearing on the poll of the day
    * Add option to disable scrolling to QuickPost after quoting
    * The options window no longer blocks focus to the Firefox window on
      Windows
    * Move the topic list QuickPost link next to the New Topic link to prevent
      accidental clicks on Add to/Remove Favorites

2010-09-01:
    * version 0.7.8